# pingcap-study-plan

courses/rust/projects/project-1-self/: Cargo.toml
courses/rust/projects/project-1-self/src/: kv.rs  lib.rs
