[package]
name = "kvs"
version = "0.1.0"
authors = ["Harry Sun <xu94liang@gmail.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# see dependency features at https://doc.rust-lang.org/cargo/reference/features.html#dependency-features
clap = { version = "4.3.24", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs"
test = false
doctest = false